changing information in HTML

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             <div class="menu-item">
               <img src="./img/food1.png" alt="LASAL Cheese">
               <div>
-                <h3>LASAL CHEESE <span class="primary-text">$18.00</span></h3>
+                <h3>Falafel CHEESE <span class="primary-text">$18.00</span></h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, explicabo.</p>
               </div>
             </div>
